# Aurora_Mobile_Robotics_Task_2

./: .gitignore  README.md  pyproject.toml
AMR_Task2/: 05_differential_1.py  06_ackermann.py  README.md  pose_basics.py  simulate_multiple_poses.py  try.py
AuroraMR/: __init__.py
amr/: __init__.py  live_motion.py  motion.py  playback_log.py  plot_motion.py  pose.py  simulate.py
amr/kinematics/: __init__.py  integration.py  params.py
examples/: motion_bicycle_demo.py  pose_basics.py  simulate_custom_figure.py  simulate_pointer.py
examples/advanced/: 01_playback_logoptions_and_file.py  02_drive_to_pose_tolerances.py  03_mecanum_holonomic.py  04_differential_wheels_timebased.py  05_four_kinematics_subplots.py  06_export_trajectory_csv.py  07_plot_motion_custom_style.py  README.md
examples/class/: 01_pose.py  02_simulate.py  03_session_two_wheel.py  04_plot_static.py  05_differential.py  06_ackermann.py  07_mecanum.py  08_playback_log.py  README.md  try.py
examples/simple/: test.py
scripts/: run_tests.sh
tests/: test_kinematics.py  test_playback_log.py
