[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AuroraMR"
version = "0.3.3"
description = "Small utilities for autonomous mobile robotics."
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["amr", "AuroraMR"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
